--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <div class="bingo-cell">Check who wished you a happy birthday</div>
                     <div class="bingo-cell">holding flowers in your hands</div>
                     <div class="bingo-cell">Make a birthday wish</div>
-                    <div class="bingo-cell">FREE SPACE (she's Alida)</div>
+                    <div class="bingo-cell">FREE SPACE</div>
                     <div class="bingo-cell">Deny that you are not a Chinese girl</div>
                     <div class="bingo-cell">Say "A famous quote by Alida!"</div>
                     <div class="bingo-cell">going for a walk</div>
