--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ Friendo 👽</p>
                 <div class="interactive-buttons">
                     <button class="interactive-button" id="ageUpBtn">Age-Up Machine</button>
                     <button class="interactive-button" id="danceBtn">Birthday Dance-Off</button>
-                    <button class="interactive-button" id="complimentBtn">Realistic compliments</button>
+                    <button class="interactive-button" id="complimentBtn">Realistic Compliments</button>
                     <button class="interactive-button" id="videoBtn">The Art Of Messing You</button>
                 </div>
                 
